# PepLab

./: README.md  Workflows.mmd  cyclic_permutations.csv  dihedral_permutations.csv  peptide_library.csv  pyproject.toml  statistics.json  summary.txt
peplab/: PepLab_Peptide_Library_Generator.ipynb  __init__.py  setup.py
peplab/analysis/: __init__.py
peplab/analysis/peptide/: __init__.py  peptide_analyzer.py
peplab/analysis/property/: __init__.py  alogp_calculator.py  exact_mass_calculator.py  hba_count_calculator.py  hbd_count_calculator.py  property_analyzer.py  property_calculator.py  property_calculator_factory.py  reactivity_profile.py  rotatable_bonds_calculator.py  thermodynamics.py
peplab/analysis/structure/: structure_generator.py
peplab/backend/: app.py
peplab/cli/: generate_peptide_library.py  generate_peptide_library.slurm
peplab/core/: __init__.py
peplab/core/base/: __init__.py  molecular_entity.py  property_store.py
peplab/core/graph/: __init__.py  molecule_graph.py
peplab/core/molecule/: __init__.py  atom.py  bond.py  peptide.py  position.py  residue.py
peplab/frontend/: index.html  main.css  molecule-viewer.js
peplab/generate/: generate_cartesian.py  generate_combination.py  generate_kfold.py
peplab/test/: ppLibInputAzideTest1.csv  test-combinative-composition.py  test-grouptheoretic-composition.py  test_peptide_library_generator.py
peplab/utils/: __init__.py  csv_export.py  generate_peplib.py  rdkit_utils.py  scrape_cyclic_pepedia.py  smiles_generator.py
peplab/visualization/: __init__.py  cpk_colors.py  rdkit_visualizer.py
(+38 files in other folders)
