[tool.poetry]
name = "peplab"
version = "0.1.0"
description = "A suite of tools for generating and analyzing peptide libraries."
authors = ["Adam Murray"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


matplotlib = "^3.9.2"
numpy = "^2.1.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
networkx = "^3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
